@@ -60,6 +60,12 @@ as are the following DOM elements:
 <li>onMouseOver - invoked when link.mouseOver() is invoked<li>
 </ul>
 
+<h3>Input (and subclasses)</h3>
+<h4>methods</h4>
+<ul>
+<li>focus() - a no-op</li>
+</ul>
+
 <h3>Text</h3>
 <h4>properties</h4>
 <ul>
